--- a/modules/coop_utils/locale/fr_FR.po
+++ b/modules/coop_utils/locale/fr_FR.po
@@ -158,43 +158,43 @@ msgctxt "field:ir.export_package.item,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:coop_utils.export_package,code:"
+msgctxt "field:ir.export_package,code:"
 msgid "Code"
 msgstr "Code"
 
-msgctxt "field:coop_utils.export_package,create_date:"
+msgctxt "field:ir.export_package,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:coop_utils.export_package,create_uid:"
+msgctxt "field:ir.export_package,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:coop_utils.export_package,id:"
+msgctxt "field:ir.export_package,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:coop_utils.export_package,instances_to_export:"
+msgctxt "field:ir.export_package,instances_to_export:"
 msgid "Instances to export"
 msgstr "Eléments à exporter"
 
-msgctxt "field:coop_utils.export_package,model:"
+msgctxt "field:ir.export_package,model:"
 msgid "Model"
 msgstr "Modèle"
 
-msgctxt "field:coop_utils.export_package,package_name:"
+msgctxt "field:ir.export_package,package_name:"
 msgid "Package Name"
 msgstr "Nom du Groupe"
 
-msgctxt "field:coop_utils.export_package,rec_name:"
+msgctxt "field:ir.export_package,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:coop_utils.export_package,write_date:"
+msgctxt "field:ir.export_package,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:coop_utils.export_package,write_uid:"
+msgctxt "field:ir.export_package,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -390,7 +390,7 @@ msgctxt "model:ir.export_package.item,name:"
 msgid "Export Instance"
 msgstr "Elément à exporter"
 
-msgctxt "model:coop_utils.export_package,name:"
+msgctxt "model:ir.export_package,name:"
 msgid "Export Package"
 msgstr "Exports groupés"
 
@@ -494,11 +494,11 @@ msgctxt "view:ir.export_package.item:"
 msgid "Export instances"
 msgstr ""
 
-msgctxt "view:coop_utils.export_package:"
+msgctxt "view:ir.export_package:"
 msgid "Export Package"
 msgstr "Exports groupés"
 
-msgctxt "view:coop_utils.export_package:"
+msgctxt "view:ir.export_package:"
 msgid "Export Packages"
 msgstr ""
 
