--- a/modules/distribution_product/locale/fr_FR.po
+++ b/modules/distribution_product/locale/fr_FR.po
@@ -78,19 +78,19 @@ msgctxt "field:distribution.commercial_product,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:distribution.dist_network,all_com_products:"
+msgctxt "field:distribution.network,all_com_products:"
 msgid "All Comercial Products"
 msgstr "Tous les produits commerciaux"
 
-msgctxt "field:distribution.dist_network,commercial_products:"
+msgctxt "field:distribution.network,commercial_products:"
 msgid "Commercial Products"
 msgstr "Produits Commerciaux"
 
-msgctxt "field:distribution.dist_network,company:"
+msgctxt "field:distribution.network,company:"
 msgid "Company"
 msgstr "Société"
 
-msgctxt "field:distribution.dist_network,parent_com_products:"
+msgctxt "field:distribution.network,parent_com_products:"
 msgid "Top Level Commercial Products"
 msgstr "Produits Commerciaux Hérités"
 
@@ -158,7 +158,7 @@ msgctxt "view:distribution.commercial_product:"
 msgid "Commercial Product"
 msgstr "Produit Commercial"
 
-msgctxt "view:distribution.dist_network:"
+msgctxt "view:distribution.network:"
 msgid "Products"
 msgstr "Produits"
 
