--- a/modules/insurance_collective_subscription/locale/fr_FR.po
+++ b/modules/insurance_collective_subscription/locale/fr_FR.po
@@ -7,11 +7,11 @@ msgid "Group"
 msgstr "Groupe"
 
 msgctxt ""
-"wizard_button:ins_contract.subscription_process_finder,process_parameters,action:"
+"wizard_button:contract.subscribe,process_parameters,action:"
 msgid "Start Process"
 msgstr "Démarrer le processus"
 
 msgctxt ""
-"wizard_button:ins_contract.subscription_process_finder,process_parameters,end:"
+"wizard_button:contract.subscribe,process_parameters,end:"
 msgid "Cancel"
 msgstr "Annuler"
